--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <p>なのでここで軽く紹介しようと思います。</p>
         <p>今回購入したのはCrucialの<a href="https://www.amazon.co.jp/gp/product/B077PPN5NN/ref=ppx_od_dt_b_asin_title_s00?ie=UTF8&psc=1">MX500</a> 500GBです。</p>
         <p>Amazonにて￥4200にて購入しました。</p>
-        <img src="file:///C:/Users/kamee/OneDrive/%E7%94%BB%E5%83%8F/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202023-10-15%20133254.png">
+        <img src="https://ton.twitter.com/1.1/ton/data/dm/1713482602165002594/1713482592576745472/Hio8ZwCz.png:small">
         <p>まあいろんな記事で書いてある通り、結構パソコンの速度は早くなりました。</p>
         <p>一応CrystalDiskMarkの結果貼っときます。</p>
         <h4>HDD</h4>
-        <img src="file:///C:/Users/kamee/OneDrive/%E7%94%BB%E5%83%8F/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88/CrystalDiskMark_20231015140824.png">
+        <img src="https://ton.twitter.com/1.1/ton/data/dm/1713482633131552873/1713482619755880448/LNw9P3Go.jpg:small">
         <h4>SSD</h4>
-        <img src="file:///C:/Users/kamee/OneDrive/%E7%94%BB%E5%83%8F/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88/CrystalDiskMark_20231015135356.png">
+        <img src="https://ton.twitter.com/1.1/ton/data/dm/1713482662122578264/1713482648948232192/lZByFTdJ.jpg:small">
         <wbr>
         <h3>高校選びと勉強時間</h3>
         <p>次にいきなりですが、進路関係の話をさせていただきます。</p>
