--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <p>なのでここで軽く紹介しようと思います。</p>
         <p>今回購入したのはCrucialの<a href="https://www.amazon.co.jp/gp/product/B077PPN5NN/ref=ppx_od_dt_b_asin_title_s00?ie=UTF8&psc=1">MX500</a> 500GBです。</p>
         <p>Amazonにて￥4200にて購入しました。</p>
-        <img src="https://ton.twitter.com/1.1/ton/data/dm/1713482602165002594/1713482592576745472/Hio8ZwCz.png:small">
+        <a href="https://www.amazon.co.jp/gp/product/B077PPN5NN/ref=ppx_od_dt_b_asin_title_s00?ie=UTF8&psc=1"><img src="https://pbs.twimg.com/media/F8eFGuLbwAA-zMR?format=png&name=small"></a>
         <p>まあいろんな記事で書いてある通り、結構パソコンの速度は早くなりました。</p>
         <p>一応CrystalDiskMarkの結果貼っときます。</p>
         <h4>HDD</h4>
-        <img src="https://ton.twitter.com/1.1/ton/data/dm/1713482633131552873/1713482619755880448/LNw9P3Go.jpg:small">
+        <img src="https://pbs.twimg.com/media/F8eFGsfb0AAzpdj?format=jpg&name=small">
         <h4>SSD</h4>
-        <img src="https://ton.twitter.com/1.1/ton/data/dm/1713482662122578264/1713482648948232192/lZByFTdJ.jpg:small">
+        <img src="https://pbs.twimg.com/media/F8eFGsFakAAQRO6?format=jpg&name=small">
         <wbr>
         <h3>高校選びと勉強時間</h3>
         <p>次にいきなりですが、進路関係の話をさせていただきます。</p>
