--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <wbr>
         <h3>SSDに換装！！</h3>
         <p>実は最近パソコンのHDDをSSDに換装いたしました。</p>
-        <p>交換の手順とかを記事にしよう。とか思ったんですが、私にそんな体は残っていませんでした。</p>
+        <p>交換の手順とかを記事にしよう。とか思ったんですが、私にそんな体力は残っていませんでした。</p>
         <p>なのでここで軽く紹介しようと思います。</p>
         <p>今回購入したのはCrucialの<a href="https://www.amazon.co.jp/gp/product/B077PPN5NN/ref=ppx_od_dt_b_asin_title_s00?ie=UTF8&psc=1">MX500</a> 500GBです。</p>
         <p>Amazonにて￥4200にて購入しました。</p>
@@ -46,7 +46,7 @@
         <p>ここにきて自己管理の甘さが出たのですが、まじでおんなじ状態の同志がいたらDM(　ﾟдﾟ)ｸﾚ</p>
         <h3>最後に</h3>
         <p>多分ここまで読んでいる人はいないと思いますが一応書いておきますね。</p>
-        <p>たぶん今後は斌夫案に更新するか、一切更新しないかのに宅になると思います。</p>
+        <p>たぶん今後は頻繁に更新するか、一切更新しないかの二択なると思います。</p>
         <p>一切更新しない際は勉強頑張っているのだとでも思ってください。</p>
         <p>ということでもう疲れたのでそろそろ終わりにします。</p>
         <p>ここまで読んでくれてありがとうございます。</p>
